# tsw_connect

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.yml  tsw_connect.py
src/config/: config.py  constants.py
src/utils/: dashboard_gui.py  gpkg_writer_utils.py  request_utils.py  tsw_data.py  tsw_httpapi.py
